<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.photopicker.picker.ImageListingViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_image_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_primary_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_image_count"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@color/light_primary_color"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_image_count"
                style="@style/textStyleSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_2sdp"
                tools:text="hello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_edit_icon"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_3sdp"
                app:srcCompat="@drawable/ic_edit_icon"
                app:layout_constraintBottom_toBottomOf="@+id/tv_image_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_image_count" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_anchor="@+id/cl_image_list"
            app:layout_anchorGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_image_count">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recycler_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_image_count"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/pic_item" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/pick_image"
            android:src="@drawable/ic_image"
            app:backgroundTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_corner_bg"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingTop="@dimen/_8sdp"
            android:elevation="@dimen/_10sdp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/_210sdp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/slideDownLogo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/slider_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- task text view-->


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cancel_image_bottom_sheet"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/ic_cross_icon_white"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/slideDownLogo" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center_horizontal"
                android:text="@string/enter_the_new_list_size"
                android:textAppearance="@style/textStyleHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slideDownLogo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/please_enter_the_number"
                android:textAppearance="@style/textStyleBody2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/list_size"
                style="@style/TextInputLayoutCustomFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="List Size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_list_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:enabled="false"
                android:text="@string/apply"
                app:cornerRadius="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_size" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_no_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_no_notification_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_search"
                app:srcCompat="@drawable/ic_pic_not_yet_selected" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Please Select The Images"
                android:textAppearance="@style/textAppearanceNotFound" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/you_can_select"
                android:textAppearance="@style/textAppearanceNotFoundDescription" />

        </LinearLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>